--- a/package.json
+++ b/package.json
@@ -4,18 +4,27 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev": "nodemon --legacy-watch --trace-warnings ./bin/www"
+    "start:dev": "nodemon --legacy-watch ./app.ts"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.218.0",
     "@aws-sdk/client-transcribe-streaming": "^3.218.0",
     "@aws-sdk/lib-storage": "^3.218.0",
+    "@types/lodash.once": "^4.1.7",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "lodash.once": "^4.1.1",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "@types/cookie-parser": "^1.4.3",
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.11.9",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.0",
+    "typescript": "^4.9.3"
   }
 }
